tests/baselines/reference/constructorArgsErrors2.errors.txt
constructorArgsErrors2.ts(2,25): error TS1090: 'static' modifier cannot appear on a parameter.


==== constructorArgsErrors2.ts (1 errors) ====
    class foo {
        constructor (public static a: number) {
                            ~~~~~~
!!! error TS1090: 'static' modifier cannot appear on a parameter.
        }
    }
    